--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -9,6 +9,7 @@
 
 	"userinfo_embed_id": "**ID:** {user_id}\n",
 	"userinfo_embed_username": "**Username:** {user_name}\n",
+	"userinfo_embed_nickname": "**Nickname:** {user_nickname}\n",
 	"userinfo_embed_profile": "**Profile:** <@{user_id}>\n",
 	"userinfo_embed_avatar": "**Avatar URL:** [Link]({user_avatar})\n",
 	"userinfo_embed_bot": "**Bot:** {user_bot}\n",
