--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -16,6 +16,7 @@
 	"userinfo_embed_created": "**Account Creation:** {user_age}",
 	"userinfo_embed_joined": "**Joined Guild:** {user_joined}",
 	"userinfo_embed_premium": "**Boosting since:** {user_premium}",
+	"userinfo_embed_roles": "**Roles:** {user_roles}",
 
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
