--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -18,6 +18,19 @@
 	"userinfo_embed_premium": "**Boosting since:** {user_premium}",
 	"userinfo_embed_roles": "**Roles:** {user_roles}",
 
+	"serverinfo_embed_owner": "{emote_owner} **Owner:** <@{guild_owner_name}> `{guild_owner_id}`\n",
+	"serverinfo_embed_features": "**Features:** {guild_features}\n",
+	"serverinfo_embed_region": "**Region:** {guild_region}\n",
+	"serverinfo_embed_verification": "**Verification level:** {guild_verification}\n",
+	"serverinfo_embed_created": "**Created at:** {guild_age}",
+
+	"serverinfo_server_stats": "**Server stats**",
+	"serverinfo_server_stats_total": "Total: **{guild_members}**/{guild_max}\n",
+	"serverinfo_server_stats_online": "{emote_online}: **{guild_online}**\n",
+	"serverinfo_server_stats_idle": "{emote_idle}: **{guild_idle}**\n",
+	"serverinfo_server_stats_dnd": "{emote_dnd}: **{guild_dnd}**\n",
+	"serverinfo_server_stats_offline": "{emote_offline}: **{guild_offline}**\n",
+
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
 	"uptime_uptime": "The current uptime is **{uptime}**",
