--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -25,11 +25,26 @@
 	"serverinfo_embed_created": "**Created at:** {guild_age}",
 
 	"serverinfo_server_stats": "**Server stats**",
+	"serverinfo_channel_stats": "**Channel stats**",
+	"serverinfo_booster_stats": "**Booster stats**",
 	"serverinfo_server_stats_total": "Total: **{guild_members}**/{guild_max}\n",
 	"serverinfo_server_stats_online": "{emote_online}: **{guild_online}**\n",
 	"serverinfo_server_stats_idle": "{emote_idle}: **{guild_idle}**\n",
 	"serverinfo_server_stats_dnd": "{emote_dnd}: **{guild_dnd}**\n",
 	"serverinfo_server_stats_offline": "{emote_offline}: **{guild_offline}**\n",
+	"serverinfo_channel_stats_voice": "Voice Channels: **{guild_voice}**\n",
+	"serverinfo_channel_stats_text": "Text Channels: **{guild_text}**\n",
+	"serverinfo_channel_stats_category": "Category: **{guild_category}**\n",
+	"serverinfo_booster_tier": "Booster Tier: **{guild_booster_tier}**\n",
+	"serverinfo_booster_boosters": "Boosters: **{guild_booster_boosters}**\n",
+	"serverinfo_booster_tier_1": "Emote slots: **100**\nAudio quality: **128** kbps\n",
+	"serverinfo_booster_tier_2": "Emote slots: **150**\nAudio quality: **256** kbps\nUpload limit: **50 MB**\n",
+	"serverinfo_booster_tier_3": "Emote slots: **250**\nAudio quality: **384** kbps\nUpload limit: **100 MB**\n",
+	"serverinfo_roles": "Roles ({guild_amount_roles})",
+	"serverinfo_emotes": "Emotes ({guild_amount_emotes})",
+	"serverinfo_roles_too_many": " and **{guild_roles_left}** more",
+	"serverinfo_emotes_too_many": " and **{guild_emotes_left}** more",
+	"serverinfo_emotes_none": "No emotes",
 
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
