--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -2,7 +2,8 @@
 	"global_executed_by": "Executed by {user_name}#{user_discriminator}",
 	"global_missing_permission": ":lock: Missing permission(s)",
 	"global_missing_permission_bot": "The bot is missing crucial permission to perform this command! Please check the bots permission",
-	"global_user_not_found": "{emote_warn} Could not find user `{user}`",
+	"global_user_not_found": "{emote_warn} Could not find user `{user_id}`",
+	"global_mod_action_log": "Moderator: {moderator_id} | Target: {user_id} | Reason: {reason}",
 
 	"event_message_args_unexpected": "{emote_warn} Unexpected argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_tools} **Correct usage:** {usage}",
 	"event_message_args_missing": "{emote_warn} Missing argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_tools} **Correct usage:** {usage}",
@@ -45,6 +46,8 @@
 	"serverinfo_roles_too_many": " and **{guild_roles_left}** more",
 	"serverinfo_emotes_too_many": " and **{guild_emotes_left}** more",
 	"serverinfo_emotes_none": "No emotes",
+
+	"ban_success": "{emote_ban} Banned **{user_name}**#{user_discriminator} `({user_id})` for **{reason}**",
 
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
