--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -52,6 +52,9 @@
 	"ban_fail": "{emote_warn} Unable to ban **{target_tag}** `({target_id})`",
 	"already_banned": "{emote_warn} **{target_tag}** `({target_id})` is already banned with the reason `{reason}`",
 
+	"kick_success": "{emote_ban} Kicked **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"kick_fail": "{emote_warn} Unable to kick **{target_tag}** `({target_id})`",
+
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
 	"uptime_uptime": "The current uptime is **{uptime}**",
