Still wip but hey it works

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -58,6 +58,8 @@
 	"kick_success": "{emote_kick} Kicked **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
 	"kick_fail": "{emote_warn} Unable to kick **{target_tag}** `({target_id})`",
 
+	"purge_too_many": "{emote_warn} Can only purge a max of 500 messages at a time",
+
 	"ping_latency": "Bot latency is **{latency_bot}ms**\nWebSocket latency is **{latency_ws}ms**",
 
 	"uptime_uptime": "The current uptime is **{uptime}**",
