--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -77,6 +77,8 @@
 
 	"inviteinfo_error": "{emote_warn} Unable to find a guild with that invite",
 
+	"multiban_success": "{emote_ban} Banned {full_list} for {reason}",
+
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
 	"snowflake_info": "I don't know if this snowflake belongs to anyone or anything\n\n"
 }
