--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -79,6 +79,8 @@
 
 	"multiban_success": "{emote_ban} Banned {full_list} for {reason}",
 
+	"multikick_success": "{emote_kick} Kicked {full_list} for {reason}",
+
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
 	"snowflake_info": "I don't know if this snowflake belongs to anyone or anything\n\n"
 }
