--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -102,6 +102,10 @@
 	"slowmode_success_remove": "{emote_confirm} Successfully removed slowmode from {channel}",
 	"slowmode_success": "{emote_confirm} Successfully set slowmode in {channel} to **{slowmode}**",
 
+	"lockdown_not_boolean": "{emote_warn} Argument `lock` value must be a Boolean! (`true` or `false`)",
+	"lockdown_locked": "{emote_confirm} Successfully locked down channel {channel}",
+	"lockdown_unlocked": "{emote_confirm} Successfully unlocked channel {channel}",
+
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
 	"snowflake_info": "I don't know if this snowflake belongs to anyone or anything\n\n"
 }
