Fixed inconsistency between infoing guild users and users not in the guild

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -17,11 +17,11 @@
 	"userinfo_embed_profile": "**Profile:** <@{user_id}>\n",
 	"userinfo_embed_avatar": "**Avatar URL:** [Link]({user_avatar})\n",
 	"userinfo_embed_bot": "**Bot:** {user_bot}\n",
-	"userinfo_embed_created": "**Account Creation:** {user_age}",
-	"userinfo_embed_joined": "**Joined Guild:** {user_joined}",
-	"userinfo_embed_premium": "**Boosting since:** {user_premium}",
-	"userinfo_embed_roles": "**Roles:** {user_roles}\n\n",
-	"userinfo_embed_infractions": "**Infractions:** {emote_inf} **{user_infractions}** infraction(s) on this server",
+	"userinfo_embed_created": "**Account Creation:** {user_age}\n",
+	"userinfo_embed_joined": "**Joined Guild:** {user_joined}\n",
+	"userinfo_embed_premium": "**Boosting since:** {user_premium}\n",
+	"userinfo_embed_roles": "**Roles:** {user_roles}\n",
+	"userinfo_embed_infractions": "\n**Infractions:** {emote_inf} **{user_infractions}** infraction(s) on this server",
 
 	"serverinfo_embed_owner": "{emote_owner} **Owner:** <@{guild_owner_name}> `{guild_owner_id}`\n",
 	"serverinfo_embed_features": "**Features:**\n{guild_features}\n",
