--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -114,6 +114,9 @@
 	"lockdown_locked": "{emote_confirm} Successfully locked down channel {channel}",
 	"lockdown_unlocked": "{emote_confirm} Successfully unlocked channel {channel}",
 
+	"mute_muterole_not_found": "{emote_warn} This guild does not have a mute role configured!\n{emote_wrench} **Tip:** You can configure the mute role using the `!configure mute_role` command",
+	"mute_success": "{emote_mute} Muted **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+
 	"warn_success": "{emote_success} Warned **{user_name}#{user_discriminator}** `({user_id})` for **{reason}**`[{infractionId}]`",
 
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
