--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -9,10 +9,24 @@
 	"global_logging_unban_auto": "`[{timestamp}]` **{target_tag}** `({user_id})`has been {action} by **{moderator_tag}** `({moderator_id})` after their temporary punishment expired `[#{infractionId}]`",
 	"global_logging_mod_temp": "`[{timestamp}]` **{target_tag}** `({user_id})`has been {action} by **{moderator_tag}** `({moderator_id})` until **{until}** for **{reason}** `[#{infractionId}]`",
 	"global_no_reason": "No reason given",
+	"global_loading": "{emote_loading} Loading...",
 	"global_not_in_voice": "{emote_warn} User is not connected to a Voice Channel!",
 
 	"event_message_args_unexpected": "{emote_warn} Unexpected argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
 	"event_message_args_missing": "{emote_warn} Missing argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
+
+	"event_channel_create": "**Channel created:** <#{channel_id}> `({channel_type})`",
+	"event_channel_delete": "**Channel deleted:** #{channel_name} `({channel_id})` `({channel_type})`",
+	"event_channel_update_topic_added": "<#{channel_id}> channel topic was added `{channel_topic}`\n",
+	"event_channel_update_topic_removed": "<#{channel_id}> channel topic was removed\n",
+	"event_channel_update_topic_updated": "<#{channel_id}> channel topic was changed from `{oldchannel_topic}` to `{newchannel_topic}`\n",
+	"event_channel_update_name": "<#{channel_id}> name was changed from `#{oldchannel_name}` to `#{newchannel_name}`\n",
+	"event_channel_update_type": "<#{channel_id}> type was changed from `{oldchannel_type}` to `{newchannel_type}`\n",
+	"event_channel_update_nsfw_enabled": "<#{channel_id}> nsfw was `enabled`\n",
+	"event_channel_update_nsfw_disabled": "<#{channel_id}> nsfw was `disabled`\n",
+
+	"event_member_joined": "{emote_join} **New member:** **{user_tag}** `({user_id})` - **Account created:** {user_age}",
+	"event_member_left": "{emote_leave} **Member left:** **{user_tag}** `({user_id})`",
 
 	"userinfo_embed_id": "**ID:** {user_id}\n",
 	"userinfo_embed_username": "**Username:** {user_name}\n",
