--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -133,6 +133,8 @@
 
 	"warn_success": "{emote_success} Warned **{user_name}#{user_discriminator}** `({user_id})` for **{reason}**`[{infractionId}]`",
 
+	"unmute_success": "{emote_success} Unmuted **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
 	"snowflake_info": "I don't know if this snowflake belongs to anyone or anything\n\n"
 }
