--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -130,6 +130,8 @@
 
 	"mute_muterole_not_found": "{emote_warn} This guild does not have a mute role configured!\n{emote_wrench} **Tip:** You can configure the mute role using the `!configure mute_role` command",
 	"mute_success": "{emote_mute} Muted **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"mute_not_muted": "{emote_warn} The specified user is not currently muted!",
+	"mute_already_muted": "{emote_warn} The specified user is already muted!",
 
 	"warn_success": "{emote_success} Warned **{user_name}#{user_discriminator}** `({user_id})` for **{reason}**`[{infractionId}]`",
 
